--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
-VITE_API_URL="http://localhost:3000/api/v1"
-VITE_STATIC_URL="http://localhost:3000"
+VITE_API_KEY="e4d124bd2a7b0acdd94c4bfb99bebd99"
+VITE_API_SECRET="9ce50c7299ee61f3"
+VITE_API_URL="https://www.flickr.com/services/rest/?method=flickr.photos.search&api_key="
